# matlab-cmake-mex

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  TestDemo.m  buildfile.m
.github/workflows/: ci.yml
cmake/: FindMatlab.cmake  engine.c  engine.cpp  engine.f90  matlab.cmake
cmake/Modules/: FindOctave.cmake
engine/: CMakeLists.txt  eng_demo.F90  eng_demo.cpp  engdemo.c
matlab/: CMakeLists.txt  fengdemo.F90  fengdemo.c  matlab_include.cmake  meson.build
mex/: CMakeLists.txt  TestBlas.m  TestMex.m  assumer.m
octave/: CMakeLists.txt  octave_mex.c  octave_mex.cpp  octdemo.cpp
src/: CMakeLists.txt  eng_demo.cpp  engdemo.c  fengdemo.F90
